--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript": "~3.5.3"
   },
   "engines": {
-    "node":"~12.13.1",
-    "npm":"~6.13.6"
+    "node": "~12.13.1",
+    "npm": "6.12.1"
   }
 }
